--- a/malatang-parent/malatang-ht/src/main/resources/application.yaml
+++ b/malatang-parent/malatang-ht/src/main/resources/application.yaml
@@ -43,17 +43,17 @@ logging:
 ali:
   oss:
     endpoint: http://oss-cn-beijing.aliyuncs.com
-    accessKeyId: LTAI4G13rFHYc89gtRwRGh1w
-    accessKeySecret: eUd0yO0uf3INqUvXNiSDgRD4y3j3wP
-    bucketName: chang1024
+    accessKeyId: 
+    accessKeySecret: 
+    bucketName: 
 
 
 # 微信配置
 wx:
   mp:
     configs:
-      - appId: wx22896c5aff78e935
-        secret: 6ce1e940ab0ccf6fea214eca8c661dff
-        token: atd1234564564536456456
+      - appId: wx22896c5aff74435
+        secret: 6ce1e940ab0ccf644414eca8c661dff
+        token: atd12345645645364446
         aesKey: 123
     url: http://swxy.online/OAuth
